<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/listV_main"
        android:layout_width="fill_parent"
        android:layout_height="399dp"
        android:layout_above="@+id/uploadTextButton"
        android:layout_alignParentTop="true" 
        android:minHeight="400dp" >
    </ListView>
    
    <Button
        android:id="@+id/uploadTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadImageButton"
        android:layout_centerHorizontal="true"
        android:text="@string/UploadText" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Camera" />
    
    <EditText
        android:id="@+id/uploadTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadImageButton"
        android:layout_toLeftOf="@+id/uploadTextButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:inputType="textMultiLine" />
    
    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick = "btnClick"
        android:text="@string/UploadImage" />
    
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Refresh" />

</RelativeLayout>